--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 fastapi==0.68.0
 uvicorn==0.12.2
 peewee==3.16.0
-passlib==1.7.4
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
