--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,27 @@
+anyio==3.7.1
+async-timeout==4.0.3
+bcrypt==4.0.1
+cffi==1.15.1
+click==7.1.2
+cryptography==41.0.3
+dnspython==2.4.2
+ecdsa==0.18.0
+email-validator==2.0.0.post2
 fastapi==0.95.1
-uvicorn==0.12.2
+h11==0.14.0
+idna==3.4
+passlib==1.7.4
 peewee==3.16.0
-passlib[bcrypt]==1.7.4
-python-jose[cryptography]==3.3.0
+Pillow==10.0.0
+pyasn1==0.5.0
+pycparser==2.21
+pydantic==1.10.12
+python-jose==3.3.0
 python-multipart==0.0.6
 redis==4.5.4
+rsa==4.9
+six==1.16.0
+sniffio==1.3.0
+starlette==0.26.1
+typing_extensions==4.7.1
+uvicorn==0.12.2
